--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -23,49 +23,47 @@
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
 
-   
+    <h2>3857 Mercator</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/3857mercator.png">
+    <img src=".//maps/3857mercator.png" alt="3857mercator" width='500px'>
+    </a>
     <h2>53018Winkel</h2>
     <h3>Some observations</h3>
     <a href=".//maps/53018Winkel.png">
     <img src=".//maps/53018Winkel.png" alt="53018Winkel" width='500px'>
-    </a>
-    <h2>53076WagnerVII</h2>
-    <h3>Some observations</h3>
-    <a href=".//maps/53076WagnerVII.png">
-    <img src=".//maps/53076WagnerVII.png" alt="53076WagnerVII" width='500px'>
-    </a>
-    <h2>354027Conic</h2>
-    <h3>Some observations</h3>
-    <a href=".//maps/54027Conic.png">
-    <img src=".//maps/54027Conic.png" alt="354027Conic" width='500px'>
     </a>
     <h2>54034WorldCylindrical</h2>
     <h3>Some observations</h3>
     <a href=".//maps/54034WorldCylindrical.png">
     <img src=".//maps/54034WorldCylindrical.png" alt="54034WorldCylindrical" width='500px'>
     </a>
-    <h2>102016Zum</h2>
+ 
+    <h2>54027Conic</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/54027Conic.png">
+    <img src=".//maps/54027Conic.png" alt="54027Conic" width='500px'>
+    </a>
+
+    <h2>53076WagnerVII</h2>
+    <h3>Some observations</h3>
+    <a href=".//maps/53076WagnerVII.png">
+    <img src=".//maps/53076WagnerVII.png" alt="53076WagnerVII" width='500px'>
+    </a>
+    <h2>102016Azumathal</h2>
     <h3>Some observations</h3>
     <a href=".//maps/102016Azumathal.png">
     <img src=".//maps/102016Azumathal.png" alt="102016Azumathal" width='500px'>
     </a>
-    <h2>102033Glitch in the system</h2>
+    <h2>Glitch in the system? 3832PDC Mercator</h2>
     <h3>Some observations</h3>
-    <a href=".//maps/102033Glitch?.png">
-    <img src=".//maps/102033Glitch?.png" alt="102033Glitch?" width='500px'>
+    <a href=".//maps/3832PDC Mercator.png">
+    <img src=".//maps/3832PDC Mercator.png" alt="3832PDC" width='500px'>
     </a>
-    <h2>102033 Glitch in the System </h2>
-    <h3>Some observations</h3>
-    <a href=".//maps/102033Glitch?.png">
-    <img src=".//maps/102033Glitch?.png" alt="WGS84" width='500px'>
-    </a>
-    <h2>3857 Mercator</h2>
-    <h3>Some observations</h3>
-    <a href=".//maps/3857mercator.png">
-    <img src=".//maps/3857mercator.png" alt="3857mercator" width='500px'>
-    </a>
+   
+   
 
-    
+
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
