--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -13,50 +13,50 @@
     
   
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>An example map from Professor Arce-Nazario.</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>And a second one. </h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
 
-    <h2>3857 Mercator</h2>
-    <h3>Some observations</h3>
+    <h2>3857 Pseudo Mercator</h2>
+    <h3>This cylindrical map projection is done on a sphere using an ellipsoid's semi-major axis. It conserves proportions at the poles, unlike the world cylindrical map shown below. </h3>
     <a href=".//maps/3857mercator.png">
     <img src=".//maps/3857mercator.png" alt="3857mercator" width='500px'>
     </a>
-    <h2>53018Winkel</h2>
-    <h3>Some observations</h3>
+    <h2>53018 Winkel Tripel</h2>
+    <h3>Oscar Winkel began developing this projetion in the early 20th century. Winkel projections are modified from azumathal projections. There is an azumathal projection several maps below. </h3>
     <a href=".//maps/53018Winkel.png">
     <img src=".//maps/53018Winkel.png" alt="53018Winkel" width='500px'>
     </a>
-    <h2>54034WorldCylindrical</h2>
-    <h3>Some observations</h3>
+    <h2>54034 World Cylindrical</h2>
+    <h3>This cylindrical map heavily distorts proportions at the poles. </h3>
     <a href=".//maps/54034WorldCylindrical.png">
     <img src=".//maps/54034WorldCylindrical.png" alt="54034WorldCylindrical" width='500px'>
     </a>
  
     <h2>54027Conic</h2>
-    <h3>Some observations</h3>
+    <h3> Conic map projections view the world from the perspective of a pole. </h3>
     <a href=".//maps/54027Conic.png">
     <img src=".//maps/54027Conic.png" alt="54027Conic" width='500px'>
     </a>
 
     <h2>53076WagnerVII</h2>
-    <h3>Some observations</h3>
+    <h3>This map is similar to the Pseudo Mercator in that it maintains proportions between land masses and oceans well, while representing the earth as a spheroid.</h3>
     <a href=".//maps/53076WagnerVII.png">
     <img src=".//maps/53076WagnerVII.png" alt="53076WagnerVII" width='500px'>
     </a>
     <h2>102016Azumathal</h2>
-    <h3>Some observations</h3>
+    <h3>This conic map conserves the South Pole's continuity, unlike the first conic map.</h3>
     <a href=".//maps/102016Azumathal.png">
     <img src=".//maps/102016Azumathal.png" alt="102016Azumathal" width='500px'>
     </a>
     <h2>Glitch in the system? 3832PDC Mercator</h2>
-    <h3>Some observations</h3>
+    <h3>Regional maps don't work so well on global map layers. </h3>
     <a href=".//maps/3832PDC Mercator.png">
     <img src=".//maps/3832PDC Mercator.png" alt="3832PDC" width='500px'>
     </a>
