--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -6,7 +6,7 @@
     <title>Projections</title>
 </head>
 <body>
-    <h1 style="color: red"> QGIS Map Projections </h1>;</h1>
+    <h1 style="color: red"> QGIS Map Projections </h1>
     
     <p>Until about a week ago, I didn't know there was something called a map projection or that it differed from a map. I took for granted that when maps represent the physical world at one scale or another, they rely on techniques which cause distortions. Recently, mapping techniques have improved a great deal and modern maps often hybridize several mapping styles to produce what we consider a normal looking map. Several of the first maps shown on this page look fairly normal. As you go further down, different mathematical orientations and priorities have different consequences for the appearance of the map. This is largely due to the earth being treated as a sphere, spheroid, and geoid respectively by different map projections. In QGIS, I implemented Indicatrix's various projections and learned about the effects of these different map-making approaches. I saw orientations which privileged one variable, like an axis, or several and thus formed hybrid maps. The last map I attempted to produce was a sort of regional map on the Pacific Ocean and the landmasses which border it. I learned that this would probably be better projected onto a more local map layer. </p>
     
