--- a/index.html
+++ b/index.html
@@ -13,4 +13,9 @@
 <h1></h1>
     <a href="./UNCtopo/UNCtopo_tiles.html">Georeferenced UNC topo</a>
 </body>
+<body>
+<h1></h1>
+    <a href="./redhook_referenced/poly1referenced.html">Georeferenced image of Brooklyn 1954
+</a>
+</body>
 </html>
