--- a/index.html
+++ b/index.html
@@ -18,4 +18,8 @@
     <a href="./redhook_referenced/poly1referenced.html">Georeferenced image of Brooklyn 1954
 </a>
 </body>
+<h1></h1>
+    <a href="./1stwebmap/webmap1index.html">Georeferenced image of Brooklyn 1954
+</a>
+</body>
 </html>
