--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </body>
 <body>
 <h1></h1>
-    <a href="./redhook_referenced/poly1referenced.html">Georeferenced image of Brooklyn 1954
+    <a href="./redhook_referenced/redhook1954webmap.html">Georeferenced image and Webmap of Redhook, Brooklyn (1954)
 </a>
 </body>
 <h1></h1>
