--- a/ForGIT/homework7.html
+++ b/ForGIT/homework7.html
@@ -4,10 +4,10 @@
     <body>
     <h1> Homework7:Census Data Chloropleth</h1>
     <h2> Robert keener</h2> 
-    <h3> description </h3>
-    <a href="NCmedianEarnings.png"></a>
+    <h3> I was interested in some finding some sort of data that might shed light on a couple different variables at once. In this case, we can begin to visualize the relationship between a population's educational background and their income, according to where they live. We can see that the bachelor degree holding population in North Carolina has the highest median income in counties around Charlotte and the triangle. This could be for several reasons. College students may stay close to where they attend school, these places may have better opportunities for more qualified workers, or these numbers may reflect the inflated cost of living in urban areas. In any case, the chloropleth does a much better job of staging the information than a graph or table could. </h3>
+    <a href="files/NCmedianEarnings.png"></a>
     <h2>Data used for this project</h2>
-    <a href="ACSST5Y2019.S1501_data_with_overlays_2021-03-03T100431.csv"> You can view the CSV here </a>
+    <a href="files/ACSST5Y2019.S1501_data_with_overlays_2021-03-03T100431.csv"> You can view the CSV here </a>
     <p></p>
     <a href="files/shape/NCearningsByCounty.shp"> You can view the shapefile here </a>
     </body>
