--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
 <h1></h1>
     <a href="./1stwebmap/webmap1index.html">First Web Map 
 </a>
+<h1></h1>
+    <a href="./ForGIT/homework7.html">NC Median Earnings by County 
+</a>
 </body>
 </html>
