--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <a href="./1stwebmap/webmap1index.html">First Web Map 
 </a>
 <h1></h1>
-    <a href="./ForGIT/homework7.html">NC Median Earnings by County 
+    <a href="./NC/chloroplethNC.html">NC Median Earnings by County 
+</a>
+</a>
+<h1></h1>
+    <a href="./NM/NMpoverty.html">NM Population in Poverty by County
 </a>
 </body>
 </html>
