--- a/NMratio/NMratiomaps.html
+++ b/NMratio/NMratiomaps.html
@@ -14,18 +14,18 @@
    
     <h2>Any race of Hispanic or Latino Origin:</h2>
     <p>The particular categories may generally speak for themselves. We can see that there is a greater percentage of those of in poverty of any race of Hispanic or Latino Origin in the southern counties of New Mexico. </p>
-    <a href=".//NM/ratiomaps/HispanicLatino_originanyrace.png">
-    <img src=".//NM/ratiomaps/HispanicLatino_originanyrace.png" alt="Any race, Hispanic or Latino" width='800px'>
+    <a href=".//ratiomaps/HispanicLatino_originanyrace.png">
+    <img src=".//ratiomaps/HispanicLatino_originanyrace.png" alt="Any race, Hispanic or Latino" width='800px'>
     </a>
     <h2>White of any Origin:</h2>
     <p> We can see that this category encompasses the largest percent population of individuals in poverty with the greatest concentration of cases in the south east corner of the state. In the case of three counties, this identity category comprises over 85% of the reported cases of poverty.</p>
-    <a href=".//NM/ratiomaps/white_anyorigin.png">
-    <img src="./NM/ratiomaps/white_anyorigin.png" alt="White of Any Origin" width='800px'>
+    <a href=".//ratiomaps/white_anyorigin.png">
+    <img src=".//ratiomaps/white_anyorigin.png" alt="White of Any Origin" width='800px'>
     </a>
     <h2>White Alone:</h2>
     <p>This racial and ethnic category comprised the smallest portion of reported poverty cases of the three categories displayed. In part, we can see that it is a more selective criteria in comparison to the previous combination of white race and any ethnicity. This map paired with the prior one may provide the most useful visual exposition of the three maps shown. Between the two maps, we can come to understand that white citizens, not of Hispanic or Latino origin, comprised more significant portions of white citizens of any race, in the centralmost southern county shown. Similarly, they comprised large portions of the population in northwestern counties. While this is hardly conclusive or statistically sound evidence, it offers an initial insight and may offer grounds to conduct further research. </p>
-    <a href=".//NM/ratiomaps/white_alone.png">
-    <img src="./NM/ratiomaps/white_alone.png" alt="White Alone" width='800px'>
+    <a href=".//ratiomaps/white_alone.png">
+    <img src=".//ratiomaps/white_alone.png" alt="White Alone" width='800px'>
     </a>
     <h2></u>Afterthoughts:</h2>
     <h3>As I have already implied, I found this sort of analysis awkward and limited. Indeed, the language or reasoning behind this sort of identity reportage seemed equally ambiguous on the census questionaire itself. The simultaneous self-identification of race and ethnic origin may well have confused those surveyed. Or, it may offer a useful grid of categories for anyone hoping to conduct a thorough analysis of relations between race, ethnicity, and economic situation. </h3>
